2007-03-26  dima  <dima.exe@gmail.com>

	* rails-ruby.el: fixed compilation warnning

	* rails-rake.el, rails-scripts.el: updated, printed result of tests

	* rails-lib.el, rails.el: fix compilation error [#9547]
	
	* rails.el (rails-templates-list): added support "erb" and "liquid"

	* rails-lib.el: fixed compilation warnings

	* rails-rake.el: fixed compilation warnings

	* rails-ui.el: updated

	* rails-scripts.el: updated
	(rails-script:rake-tests-alist): removed

	* rails-ruby.el (run-ruby-in-buffer): moved from rails-scripts.el

	* rails-rake.el: created

	* rails-core.el (rails-core:migrations): added optional parameter to stip numbers

	* rails-cmd-proxy.el (rails-cmd-proxy:start-process): created

	* rails-scripts.el (rails-script:sentinel-proc): updated
	(rails-script:generation-buffer-name): removed
	(rails-script:run): updated
	(rails-script:create-project): updated

	* rails-lib.el (buffer-visible-p): created

	* rails-core.el (rails-core:file): return nil if FILE-NAME is nil

2007-03-25  dima  <dima.exe@gmail.com>

	* rails-log.el (rails-log:buffer-name): renamed from rails-log:get-buffer-name

	* rails-core.el (rails-core:add-to-rails-menubar): removed
	(rails-core:mailer-file): maked as alias
	(rails-core:controller-name): renamed from rails-core:full-controller-name
	(rails-core:regex-for-match-view): cleanup
	(rails-core:button-action): created

	* rails-find.el: created

	* rails-navigation.el: moved rails-find-* to separate file rails-find.el

	* rails.el (rails-find-file-function): removed variable

	* rails-ui.el (rails-minor-mode-menu-bar-map): update indentation

	* rails-scripts.el: refactored code

2007-03-24  dima  <dima.exe@gmail.com>

	* rails-unit-test-minor-mode.el (rails-unit-test-minor-mode): fixed

	* rails-navigation.el (rails-line-->controller+action): replace
	call rails-core:open-controller+action to
	rails-controller-layout:switch-to-action-in-controller

	* rails-snippets.el (snippet-insert): added advice